@@ -108,6 +108,7 @@ static void XorPlainMutableData(NSMutableData *mutable) {
 #endif
 
     fetchHistory_ = [[GDataHTTPFetchHistory alloc] init];
+    cookieStorageMethod_ = -1;
   }
   return self;
 }
@@ -478,7 +479,13 @@ static void XorPlainMutableData(NSMutableData *mutable) {
   }
 
   // add cookie and last-modified-since history
-  [fetcher setFetchHistory:fetchHistory_];
+  [fetcher setFetchHistory:[self fetchHistory]];
+
+  // allow the user to specify static app-wide cookies for fetching
+  NSInteger cookieStorageMethod = [self cookieStorageMethod];
+  if (cookieStorageMethod >= 0) {
+    [fetcher setCookieStorageMethod:cookieStorageMethod];
+  }
 
   // when the server gives us a "Not Modified" error, have the fetcher
   // just pass us the cached data from the previous call, if any
@@ -1442,14 +1449,30 @@ return [self fetchPublicFeedWithBatchFeed:batchFeed
   [fetchHistory_ clearDatedDataCache];
 }
 
-- (BOOL)serviceShouldFollowNextLinks {
-  return serviceShouldFollowNextLinks_;
+- (void)setFetchHistory:(GDataHTTPFetchHistory *)obj {
+  [fetchHistory_ autorelease];
+  fetchHistory_ = [obj retain];
+}
+
+- (GDataHTTPFetchHistory *)fetchHistory {
+  return fetchHistory_;
+}
+
+- (void)setCookieStorageMethod:(NSInteger)method {
+  cookieStorageMethod_ = method;
+}
+
+- (NSInteger)cookieStorageMethod {
+  return cookieStorageMethod_;
 }
 
 - (void)setServiceShouldFollowNextLinks:(BOOL)flag {
   serviceShouldFollowNextLinks_ = flag;
 }
 
+- (BOOL)serviceShouldFollowNextLinks {
+  return serviceShouldFollowNextLinks_;
+}
 
 // The service userData becomes the initial value for each future ticket's
 // userData.
@@ -1594,10 +1617,10 @@ return [self fetchPublicFeedWithBatchFeed:batchFeed
   if ([bundleID length] > 0) {
     identifier = bundleID;
   } else {
-    // fall back on the procname, prefixed by a plus to flag that it's
+    // fall back on the procname, prefixed by "proc" to flag that it's
     // autogenerated and perhaps unreliable
     NSString *procName = [[NSProcessInfo processInfo] processName];
-    identifier = [NSString stringWithFormat:@"+%@", procName];
+    identifier = [NSString stringWithFormat:@"proc_%@", procName];
   }
 
   // if there's a version number, append that
